[gd_scene load_steps=12 format=2]

[ext_resource path="res://ui/artifact_picker/artifact_picker.gd" type="Script" id=1]
[ext_resource path="res://ui/default_theme.tres" type="Theme" id=2]
[ext_resource path="res://ui/artifact_container/artifact_container.tscn" type="PackedScene" id=3]

[sub_resource type="InputEventKey" id=4]
scancode = 49

[sub_resource type="ShortCut" id=5]
shortcut = SubResource( 4 )

[sub_resource type="InputEventKey" id=6]
scancode = 50

[sub_resource type="ShortCut" id=7]
shortcut = SubResource( 6 )

[sub_resource type="InputEventKey" id=8]
scancode = 51

[sub_resource type="ShortCut" id=3]
shortcut = SubResource( 8 )

[sub_resource type="InputEventKey" id=1]
scancode = 16777217

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[node name="ArtifactPicker" type="CenterContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1273.0
margin_bottom = 713.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Panel" type="PanelContainer" parent="."]
margin_left = 127.0
margin_top = 251.0
margin_right = 1139.0
margin_bottom = 454.0

[node name="ColorRect" type="ColorRect" parent="Panel"]
margin_right = 1012.0
margin_bottom = 203.0
color = Color( 0, 0, 0, 1 )

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
margin_right = 1012.0
margin_bottom = 203.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1002.0
margin_bottom = 193.0
custom_constants/separation = 16

[node name="Title" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
modulate = Color( 1, 0.741176, 0.25098, 1 )
margin_right = 992.0
margin_bottom = 17.0
text = "You found an artifact!"
align = 1

[node name="Artifacts" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 33.0
margin_right = 992.0
margin_bottom = 113.0
custom_constants/separation = 16

[node name="ArtifactContainer1" parent="Panel/MarginContainer/VBoxContainer/Artifacts" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 320.0
margin_bottom = 80.0
hide_charge = true
hide_level = true
always_selectabled = true

[node name="ArtifactContainer2" parent="Panel/MarginContainer/VBoxContainer/Artifacts" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 336.0
margin_right = 656.0
margin_bottom = 80.0
hide_charge = true
hide_level = true
always_selectabled = true

[node name="ArtifactContainer3" parent="Panel/MarginContainer/VBoxContainer/Artifacts" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 672.0
margin_right = 992.0
margin_bottom = 80.0
hide_charge = true
hide_level = true
always_selectabled = true

[node name="Actions" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 129.0
margin_right = 992.0
margin_bottom = 148.0
custom_constants/separation = 96

[node name="Control" type="Control" parent="Panel/MarginContainer/VBoxContainer/Actions"]
margin_bottom = 19.0

[node name="Action1" type="Button" parent="Panel/MarginContainer/VBoxContainer/Actions"]
margin_left = 96.0
margin_right = 298.0
margin_bottom = 19.0
size_flags_horizontal = 3
shortcut = SubResource( 5 )
text = "Upgrade! [1]"

[node name="Action2" type="Button" parent="Panel/MarginContainer/VBoxContainer/Actions"]
margin_left = 394.0
margin_right = 597.0
margin_bottom = 19.0
size_flags_horizontal = 3
shortcut = SubResource( 7 )
text = "New! [2]"

[node name="Action3" type="Button" parent="Panel/MarginContainer/VBoxContainer/Actions"]
margin_left = 693.0
margin_right = 896.0
margin_bottom = 19.0
size_flags_horizontal = 3
shortcut = SubResource( 3 )
text = "Consume! [3]"

[node name="Control2" type="Control" parent="Panel/MarginContainer/VBoxContainer/Actions"]
margin_left = 992.0
margin_right = 992.0
margin_bottom = 19.0

[node name="Discard" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
margin_left = 378.0
margin_top = 164.0
margin_right = 613.0
margin_bottom = 183.0
rect_min_size = Vector2( 235, 0 )
size_flags_horizontal = 4
shortcut = SubResource( 2 )
text = "Discard [Esc]"

[connection signal="mouse_entered" from="Panel/MarginContainer/VBoxContainer/Artifacts/ArtifactContainer1" to="." method="_on_considering" binds= [ 0 ]]
[connection signal="mouse_exited" from="Panel/MarginContainer/VBoxContainer/Artifacts/ArtifactContainer1" to="." method="_on_unconsidering" binds= [ 0 ]]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/Artifacts/ArtifactContainer1" to="." method="_on_action_pressed" binds= [ 0 ]]
[connection signal="mouse_entered" from="Panel/MarginContainer/VBoxContainer/Artifacts/ArtifactContainer2" to="." method="_on_considering" binds= [ 1 ]]
[connection signal="mouse_exited" from="Panel/MarginContainer/VBoxContainer/Artifacts/ArtifactContainer2" to="." method="_on_unconsidering" binds= [ 1 ]]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/Artifacts/ArtifactContainer2" to="." method="_on_action_pressed" binds= [ 1 ]]
[connection signal="mouse_entered" from="Panel/MarginContainer/VBoxContainer/Artifacts/ArtifactContainer3" to="." method="_on_considering" binds= [ 2 ]]
[connection signal="mouse_exited" from="Panel/MarginContainer/VBoxContainer/Artifacts/ArtifactContainer3" to="." method="_on_unconsidering" binds= [ 2 ]]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/Artifacts/ArtifactContainer3" to="." method="_on_action_pressed" binds= [ 2 ]]
[connection signal="mouse_entered" from="Panel/MarginContainer/VBoxContainer/Actions/Action1" to="." method="_on_considering" binds= [ 0 ]]
[connection signal="mouse_exited" from="Panel/MarginContainer/VBoxContainer/Actions/Action1" to="." method="_on_unconsidering" binds= [ 0 ]]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/Actions/Action1" to="." method="_on_action_pressed" binds= [ 0 ]]
[connection signal="mouse_entered" from="Panel/MarginContainer/VBoxContainer/Actions/Action2" to="." method="_on_considering" binds= [ 1 ]]
[connection signal="mouse_exited" from="Panel/MarginContainer/VBoxContainer/Actions/Action2" to="." method="_on_unconsidering" binds= [ 1 ]]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/Actions/Action2" to="." method="_on_action_pressed" binds= [ 1 ]]
[connection signal="mouse_entered" from="Panel/MarginContainer/VBoxContainer/Actions/Action3" to="." method="_on_considering" binds= [ 2 ]]
[connection signal="mouse_exited" from="Panel/MarginContainer/VBoxContainer/Actions/Action3" to="." method="_on_unconsidering" binds= [ 2 ]]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/Actions/Action3" to="." method="_on_action_pressed" binds= [ 2 ]]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/Discard" to="." method="_on_action_pressed" binds= [ -1 ]]
